--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-./curiosity_kills_the_cat/js/plugins.js
-./curiosity_kills_the_cat/save/**
-
+**/curiosity_kills_the_cat/save/**
+.gitignore
+curiosity_kills_the_cat/js/plugins.js
